# blog_project

./: package-lock.json  package.json  pyproject.toml
instance/: bank.sqlite  blog.sqlite
src/: app.controller.ts  app.entity.ts  app.module.ts  app.py  app.service.ts  db.py
src/controllers/: post.py  user.py
src/dto/: create-consumo.dt.ts
src/public/: index.html  script.js  style.css
