[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = ""
authors = ["Eduardo Castro <eduardocastrobritoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
numpy = "^2.0.1"
flask-sqlalchemy = "*"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
